Tela de atividades e mudanças nas bordas dos campos de texto do layout de info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,8 @@
     <string name="month_9">September</string>
     <string name="month_10">October</string>
     <string name="month_11">November</string>
-    <string name="month_12">December</string>
+    <string name="month_12">December</string>.
+
     <string-array
         name="months">
         <item>@string/month_1</item>
