--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -41,4 +41,23 @@
         <item>@string/month_11</item>
         <item>@string/month_12</item>
     </string-array>
+
+    <string name="day_1">Segunda-Feira</string>
+    <string name="day_2">Terça-Feira</string>
+    <string name="day_3">Quarta-Feira</string>
+    <string name="day_4">Quinta-Feira</string>
+    <string name="day_5">Sexta-Feira</string>
+    <string name="day_6">Sábado</string>
+    <string name="day_7">Domingo</string>
+
+    <string-array
+        name="week">
+        <item>@string/day_1</item>
+        <item>@string/day_2</item>
+        <item>@string/day_3</item>
+        <item>@string/day_4</item>
+        <item>@string/day_5</item>
+        <item>@string/day_6</item>
+        <item>@string/day_7</item>
+    </string-array>
 </resources>
