--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -31,7 +31,7 @@
     <string name="weight_name">Carga</string>
 
     <string name="membership_plan_name">Tipo de plano:</string>
-    <string name="membership_last_day_name">Ultimo dia do plano:</string>
+    <string name="membership_last_day_name">Data de expiração do plano:</string>
     <string name="membership_renew_button_name">Renovar matriícula</string>
 
     <string name="current_password_name">Senha atual</string>
@@ -40,8 +40,8 @@
 
     <string name="save_button_name">Salvar</string>
     <string name="logout_button_name">Sair</string>
-    <string name="current_month">Treino de:</string>
-
+    <string name="current_month">Dados de:</string>
+    <string name="current_day">Treino de:</string>
     <string name="month_1">Janeiro</string>
     <string name="month_2">Fevereiro</string>
     <string name="month_3">Março</string>
@@ -79,9 +79,6 @@
     <string name="day_5">Sexta-Feira</string>
     <string name="day_6">Sábado</string>
     <string name="day_7">Domingo</string>
-
-
-
     <string-array
         name="days">
         <item>@string/day_1</item>
@@ -91,6 +88,13 @@
         <item>@string/day_5</item>
         <item>@string/day_6</item>
         <item>@string/day_7</item>
-
+    </string-array>
+    <string name="annual_plan">Plano anual</string>
+    <string name="semester_plan">Plano semestral</string>
+    <string name="monthly_plan">Plano mensal</string>
+    <string-array name="plans">
+        <item>@string/annual_plan</item>
+        <item>@string/semester_plan</item>
+        <item>@string/monthly_plan</item>
     </string-array>
 </resources>
