--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,8 +54,7 @@
     <string name="month_12">December</string>
     <string name="current_month">Data from:</string>
     <string name="current_day">Workout from:</string>
-    <string-array
-        name="months">
+    <string-array name="months">
         <item>@string/month_1</item>
         <item>@string/month_2</item>
         <item>@string/month_3</item>
