--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="workout_name">Workout</string>
     <string name="subscription_name">Subscription</string>
     <string name="settings_name">Settings</string>
+    <string name="reset_password_name">Reset Password</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -17,6 +18,7 @@
     <string name="workout_button">Workout Records</string>
     <string name="subscription_button">Subscription</string>
     <string name="login_button">Log in</string>
+    <string name="send_button">Send</string>
 
     <string name="name_user_info">Name:</string>
     <string name="age_user_info">Age:</string>
@@ -54,8 +56,7 @@
     <string name="month_12">December</string>
     <string name="current_month">Data from:</string>
     <string name="current_day">Workout from:</string>
-    <string-array
-        name="months">
+    <string-array name="months">
         <item>@string/month_1</item>
         <item>@string/month_2</item>
         <item>@string/month_3</item>
