--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -28,7 +28,7 @@
     <string name="imc_user_info">IMC:</string>
 
     <string name="exercise_name">Exercício</string>
-    <string name="set_name">Sér</string>
+    <string name="set_name">Séries</string>
     <string name="reps_name">Reps</string>
     <string name="weight_name">Carga</string>
 
