--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="imc_user_info">IMC:</string>
 
     <string name="exercise_name">Exercise</string>
-    <string name="set_name">Set</string>
+    <string name="set_name">Sets</string>
     <string name="reps_name">Reps</string>
     <string name="weight_name">Weight</string>
 
