--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -104,4 +104,5 @@
 
     <string name="reset_mail_success">Enviamos para seu email um link para recuperar sua senha</string>
     <string name="reset_mail_error">Erro. Esse email não está cadastrado</string>
+    <string name="workout_finish">Concluir Treino</string>
 </resources>
