--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -26,6 +26,7 @@
     <string name="height_user_info">Altura:</string>
     <string name="weight_user_info">Peso:</string>
     <string name="imc_user_info">IMC:</string>
+    <string name="workouts_user_info">Treinos realizados:</string>
 
     <string name="exercise_name">Exercício</string>
     <string name="set_name">Séries</string>
@@ -57,8 +58,7 @@
     <string name="month_11">Novembro</string>
     <string name="month_12">Dezembro</string>
 
-    <string-array
-        name="months">
+    <string-array name="months">
         <item>@string/month_1</item>
         <item>@string/month_2</item>
         <item>@string/month_3</item>
@@ -81,8 +81,7 @@
     <string name="day_5">Sexta-Feira</string>
     <string name="day_6">Sábado</string>
     <string name="day_7">Domingo</string>
-    <string-array
-        name="days">
+    <string-array name="days">
         <item>@string/day_1</item>
         <item>@string/day_2</item>
         <item>@string/day_3</item>
