--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -35,7 +35,7 @@
 
     <string name="membership_plan_name">Tipo de plano:</string>
     <string name="membership_last_day_name">Data de expiração:</string>
-    <string name="membership_renew_button_name">Renovação</string>
+    <string name="membership_renew_button_name">Renovar</string>
 
     <string name="membership_renew_label_name">Renew</string>
     <string name="current_password_name">Senha atual</string>
